Fix a horrible performance issue
Fix a horrible performance issue where the page would have frame drops and scroll lag when using the senator list. I think this was caused by the browser having to paint too much content, but I'm not sure. The solution was to use a package called `react-virtualized` that only renders visible items in the list.

--- a/frontend/components/FactionListItem.module.css
+++ b/frontend/components/FactionListItem.module.css
@@ -1,4 +1,6 @@
 .factionListItem {
+  height: 100%;
+  box-sizing: border-box;
   background-color: var(--background-color-2);
   padding: 8px;
   border-radius: 3px;
