--- a/frontend/components/SenatorListItem.module.css
+++ b/frontend/components/SenatorListItem.module.css
@@ -1,4 +1,6 @@
 .senatorListItem {
+  height: 100%;
+  box-sizing: border-box;
   display: flex;
   flex-direction: row;
   gap: 8px;
